[project]
name = "fast-sqlalc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN201", "S101"]
